--- a/.github/workflows/main_octave-cost-of-capital.yml
+++ b/.github/workflows/main_octave-cost-of-capital.yml
@@ -30,15 +30,18 @@ jobs:
       - name: Install dependencies
         run: pip install -r requirements.txt
         
+      - name: Run streamlit
+        run: streamlit run app.py --server.port=80
+        
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
       
-      - name: Upload artifact for deployment jobs
-        uses: actions/upload-artifact@v2
-        with:
-          name: python-app
-          path: |
-            . 
-            !venv/
+      # - name: Upload artifact for deployment jobs
+      #  uses: actions/upload-artifact@v2
+      #  with:
+      #    name: python-app
+      #  path: |
+      #      . 
+      #      !venv/
 
   deploy:
     runs-on: ubuntu-latest
